--- a/public/posts/web-technology-setup.mdx
+++ b/public/posts/web-technology-setup.mdx
@@ -181,7 +181,7 @@ Strong typing during coding allows the environment to make more checks and simpl
 
 ### Writing Code: Styling
 
-For this blog I keep styling simple, since some web technology CSS solutions add a lot of technical overhead. I mostly use the [Bootstrap](https://getbootstrap.com/docs/5.3/getting-started/introduction/) library's built-in styles, in particular to enable simple grid based layouts.
+For this blog I keep styling simple, since some CSS bundling solutions add a lot of technical overhead. I mostly use the [Bootstrap](https://getbootstrap.com/docs/5.3/getting-started/introduction/) library's built-in styles, in particular to enable simple grid based layouts.
 
 ```html
 <div class='row listRow'>
