--- a/public/posts/web-technology-setup.mdx
+++ b/public/posts/web-technology-setup.mdx
@@ -4,7 +4,7 @@ Previously I suggested an <a href='oauth-infrastructure-setup.mdx'>OAuth Infrast
 
 ### Web Application Code
 
-The main ingredient of an SPA is its view logic. Choose a language that remains close to the browser's default language, to reduce complexity. Also use clean code and a separation of concerns. I use TypeScript since I like the extensions to JavaScript in these areas:
+The main ingredient of an SPA is its coded logic to present views with data from APIs. Choose a language that remains close to the browser's default language, to reduce complexity. Also use clean code and a separation of concerns. I use TypeScript since I like the extensions to JavaScript in these areas:
 
 - Expressive types including interfaces and private class members.
 - Data contracts can represent API requests and responses.
