--- a/public/posts/basicspa-codingkeypoints.mdx
+++ b/public/posts/basicspa-codingkeypoints.mdx
@@ -32,7 +32,7 @@ I separate the SPA's concerns into a number of TypeScript classes, and in partic
 
 ### SPA Views
 
-The SPA's deployed HTML is minimal. The application's code builds to JavaScript bundle files that the browser can execute. The browser downloads HTML, CSS and JavaScript from a development static content server:
+The SPA's deployed HTML is minimal. The application's code builds to JavaScript bundle files that the browser can execute. The browser downloads the *indeex.html* file which triggers the download of CSS files and JavaScript bundles. At runtime, JavaScript creates HTML elements within the *root* element.
 
 ```html
 <!DOCTYPE html>
@@ -53,8 +53,6 @@ The SPA's deployed HTML is minimal. The application's code builds to JavaScript 
     </body>
 </html>
 ```
-
-At runtime, views populate the *root* element with inner elements. In particular, a *main* child element gets updated with the main view as the user navigates. Views are composed of subviews, arranged via rows and columns, using the [Bootstrap Grid System](https://getbootstrap.com/docs/5.3/layout/grid/). 
 
 ### Static Content Hosting
 
@@ -416,6 +414,14 @@ private renderData(data: CompanyTransactions): void {
     DomUtils.html('#main', html);
 }
 ```
+
+### Styling and Layout
+
+The runtime markup uses CSS classes like *row*, *col-* and *card* from the [Bootstrap Grid System](https://getbootstrap.com/docs/5.3/layout/grid/), which provides an intuitive way to arrange content into rows and columns, where card elements have their own inner rows and columns. The layout capabilities enable me to present the companies view, which is usually a list, as a card based layout on mobile layouts:
+
+<div className='smallimage'>
+    <img src='../images/50/mobile-companies.jpg' alt='mobile companies' />
+</div>
 
 ### Navigation via Hash Change Events
 
