--- a/public/posts/improved-spa-code-sample-overview.mdx
+++ b/public/posts/improved-spa-code-sample-overview.mdx
@@ -114,13 +114,13 @@ Next, run the following script, to build the code and run the API at *https://ap
 ./start.sh
 ```
 
-The SPA terminal window builds JavaScript bundles and serves them using the webpack development server:
+The SPA terminal window builds JavaScript bundles and serves them using the webpack development server on port 443:
 
-![spa build](../images/170/spa-build.jpg?v=20240831)
+![spa build](../images/170/spa-build.jpg?v=20251230)
 
-The API terminal window listens for requests from the SPA on port 443:
+The API terminal window listens for requests from the SPA on port 446:
 
-![api build](../images/170/api-build.jpg?v=20240831)
+![api build](../images/170/api-build.jpg?v=20251230)
 
 ### Step 6. Test Logins with Multiple User Accounts
 
