--- a/public/posts/azure-active-directory-setup.mdx
+++ b/public/posts/azure-active-directory-setup.mdx
@@ -160,7 +160,7 @@ git clone https://github.com/gary-archer/oauth.websample.entraid
 Identify the configuration files containing OAuth settings used by the UI and API:
 
 <div className='smallimage'>
-    <img src='../images/190/code-layout.jpg' alt='code layout' />
+    <img src='../images/190/code-layout.jpg?v=20251230' alt='code layout' />
 </div>
 
 ### Step 9. Update SPA Configuration
