Fix typo in ApiClient class name

--- a/public/posts/desktop-app-coding-key-points.mdx
+++ b/public/posts/desktop-app-coding-key-points.mdx
@@ -232,7 +232,7 @@ The following main classes are used to handle OAuth and API logic. The strategy 
 
 | Class | Responsibilities |
 | ----- | ---------------- |
-| ApClient | A forwarder to initiate API operations. |
+| ApiClient | A forwarder to initiate API operations. |
 | ApiService | Does the main work to send API requests with access tokens to the remote API endpoints. |
 | OAuthClient | A forwarder to initiate login and token-related operations. |
 | OAuthService | Does the main work to integrate with the AppAuth-JS library to trigger login and token requests, then handle responses. |
